[package]
name = "fhe-math"
description = "Mathematical utilities for the fhe.rs library"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[lib]
bench = false  # Disable default bench (we use criterion)

[features]
concrete-ntt = []
concrete-ntt-nightly = ["concrete-ntt/nightly"]

[dependencies]

[build-dependencies]
prost-build.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "zq"
harness = false

[[bench]]
name = "rq"
harness = false

[[bench]]
name = "ntt"
harness = false

[[bench]]
name = "rns"
harness = false
