[package]
name = "fhe-util"
description = "Utilities for the fhe.rs library"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]

[dev-dependencies]
proptest.workspace = true
