[package]
name = "fhe"
description = "Fully Homomorphic Encryption in Rust"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[lib]
bench = false # Disable default bench (we use criterion)

[features]
concrete-ntt = ["fhe-math/concrete-ntt"]
concrete-ntt-nightly = ["fhe-math/concrete-ntt-nightly"]

[dependencies]

[build-dependencies]
prost-build.workspace = true

[dev-dependencies]
clap.workspace = true
console.workspace = true
criterion.workspace = true
env_logger.workspace = true
indicatif.workspace = true
itertools.workspace = true
log.workspace = true
ndarray.workspace = true
rand.workspace = true

[[bench]]
name = "bfv"
harness = false

[[bench]]
name = "bfv_optimized_ops"
harness = false

[[bench]]
name = "bfv_rgsw"
harness = false

[[example]]
name = "mulpir"

[[example]]
name = "sealpir"

[[example]]
name = "voting"
